[project]
name = "object-detection"
version = "0.1.0"
description = "A lightweight cat detection script using YOLOS-Tiny"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.38.0",
    "pillow>=10.2.0",
    "requests>=2.31.0",
]

